--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
+    "build:prod": "webpack --mode=production",
     "serve": "webpack-dev-server"
   },
   "repository": {
