--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "build:prod": "webpack --mode=production",
-    "serve": "webpack-dev-server"
+    "serve": "webpack-dev-server",
+    "format:code": "prettier --write \"src/**/*.{ts,js,?css,json}\""
   },
   "repository": {
     "type": "git",
@@ -19,13 +20,28 @@
     "url": "https://github.com/PxyUp/Telegram_graph/issues"
   },
   "homepage": "https://github.com/PxyUp/Telegram_graph#readme",
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{ts,js,?css,json}": [
+      "prettier --write",
+      "git add"
+    ]
+  },
   "devDependencies": {
     "css-loader": "^2.1.1",
     "html-webpack-plugin": "^3.2.0",
+    "husky": "^1.3.1",
+    "lint-staged": "^8.1.5",
     "node-sass": "^4.11.0",
+    "prettier": "^1.16.4",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "ts-loader": "^5.3.3",
+    "tslint": "^5.13.1",
     "typescript": "^3.3.3333",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3",
