--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "webpack",
     "build:prod": "webpack --mode=production",
     "serve": "webpack-dev-server",
-    "format:code": "prettier --write \"src/**/*.{ts,js,?css,json}\""
+    "format:code": "prettier --write \"src/**/*.{ts,js,?css}\""
   },
   "repository": {
     "type": "git",
@@ -26,12 +26,13 @@
     }
   },
   "lint-staged": {
-    "src/**/*.{ts,js,?css,json}": [
+    "src/**/*.{ts,js,?css}": [
       "prettier --write",
       "git add"
     ]
   },
   "devDependencies": {
+    "copy-webpack-plugin": "^5.0.1",
     "css-loader": "^2.1.1",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^1.3.1",
