--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "webpack",
     "build:prod": "webpack --mode=production",
     "serve": "webpack-dev-server",
-    "build:github": "yarn build:prod && git add docs && git commit -m 'github pages'",
+    "build:github": "yarn build:prod && git add docs && git commit -m 'github pages' --no-verify",
     "format:code": "prettier --write \"src/**/*.{ts,js,?css}\""
   },
   "repository": {
