--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "type": "git",
     "url": "git+https://github.com/PxyUp/Telegram_graph.git"
   },
-  "author": "",
+  "author": "Iurii Panarin",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/PxyUp/Telegram_graph/issues"
