--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,16 @@
 {
     "compilerOptions": {
-      "outDir": "./dist/",
       "noImplicitAny": true,
       "esModuleInterop": true,
       "resolveJsonModule": true,
-      "module": "commonjs",
       "target": "es5",
+      "sourceMap": true,
       "allowJs": true
-    }
+    },
+    "include": [
+      "src/**/*"
+    ],
+    "exclude": [
+      "node_modules"
+    ]
 }
