--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "type": "git",
     "url": "git+https://github.com/PxyUp/Telegram_graph.git"
   },
-  "author": "Iurii Panarin",
+  "author": "Iurii Panarin <tduble94@gmail.com>",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/PxyUp/Telegram_graph/issues"
